# MFX_Project

./: .env  Cargo.toml  Makefile  build.rs
docker-compose/envs/: postgres.env
docker-compose/services/: docker-compose-postgres.yml
docker-compose/services/postgres-db-data/: postmaster.pid
docker-compose/services/postgres-db-data/base/1/: 2619  2840
docker-compose/services/postgres-db-data/base/16384/: 1247  1249  1255  1255_fsm  1255_vm  1259  13407  16421  16427  16429  16435  16437  16439  16441  16454  2579  2604  2606  2606_fsm  2608  2608_fsm  2609  2609_vm  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2675  2678  (+14 more)
docker-compose/services/postgres-db-data/base/4/: 2619
docker-compose/services/postgres-db-data/global/: 1260  1262  2671  pg_control  pg_internal.init
docker-compose/services/postgres-db-data/pg_stat/: pgstat.stat
docker-compose/services/scylla-db-data/system/cdc_generations_v3-c697df3f55393ef5b003843be7ba1422/: me-3gny_0m5e_0axio21l3669we0wb3-big-CompressionInfo.db  me-3gny_0m5e_0axio21l3669we0wb3-big-Data.db  me-3gny_0m5e_0axio21l3669we0wb3-big-Digest.crc32  me-3gny_0m5e_0axio21l3669we0wb3-big-Scylla.db  me-3gny_0m5e_0axio21l3669we0wb3-big-Statistics.db
migrations/: 20250217103345_init.up.sql
proto/: user.proto  wallet.proto
src/: mod.rs
src/handlers/: mod.rs
src/handlers/user/: init.rs  mod.rs  user_client.rs  user_server.rs
src/handlers/utils/: g_utils.rs  mod.rs
src/handlers/wallet/: wallet_server.rs
(+232 files in other folders)
