[package]
name = "grpc"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
tonic = { version = "0.10", features = ["transport", "prost"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid","time","chrono"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tonic-web = "0.10"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
secp256k1 = "0.28"
sha3 = "0.10"    
hex = "0.4"
rand = { version = "0.8.5", features = ["std"] }
ethers = "2.0"
aes-gcm = "0.10.3"




[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "server"
path = "src/handlers/user/user_server.rs"

[[bin]]
name = "client"
path = "src/handlers/user/user_client.rs"
